kategori filtresi eklendi

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,13 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+.DS_Store
+._*
+.Spotlight-V100
+.Trashes
+Thumbs.db
+*.swp
+*.swo
+*~
+*.sass-cache
+*.log
